package com.fullDetailed.fullDetailedDemo.domain.enums;

public enum AssignStatus {
    FULLY_ASSIGNED,              //  FULL_ASSIGN
    ASSIGNED_TO_LAWYER,    //  LAWYWERD
    ASSIGNED_TO_JUDGE            //  JUDGED
}
