package com.fullDetailed.fullDetailedDemo.domain.enums;

public enum CaseStatus {
    PENDING,
    UNDER_DISCUSSION,
    COMPLETED
}
