package com.fullDetailed.fullDetailedDemo.domain.enums;

public enum FileType {
    PDF,OTHER,DOCUMENT,IMAGE
}
