package com.fullDetailed.fullDetailedDemo.domain.enums;

public enum RequestStatus {
    PENDING,
    APPROVED,
    REJECTED
}
