package com.fullDetailed.fullDetailedDemo.domain.enums;

public enum Role {
    ADMIN,
    JUDGE,
    LAWYER,
    EMPTY
}
